Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30806

output parser does not recognize some line

XMLWordPrintable

    • f3110327b (master)

      In the following, the /data/dev/creator/src/libs/utils/aspects.cpp:3454:13: is not "linkified" (and not a separate Task in the end)

      In file included from /data/dev/creator/src/libs/utils/aspects.cpp:12:
      /data/dev/creator/src/libs/utils/layoutbuilder.h: In instantiation of ‘Layouting::BuilderItem<X, XInterface>::I::I(const Inner&) [with Inner = Utils::BaseAspect; X = Layouting::Row; XInterface = Layouting::LayoutInterface]’:
      /data/dev/creator/src/libs/utils/aspects.cpp:3454:13:   required from here
      /data/dev/creator/src/libs/utils/layoutbuilder.h:79:51: error: use of deleted function ‘Utils::BaseAspect::BaseAspect(const Utils::BaseAspect&)’
         79 |             apply = [p](XInterface *x) { doit_nest(x, p); };
            |                                          ~~~~~~~~^~~~~

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            hjk hjk
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes