src/plugins/projectexplorer/ldparser.cpp
@@ -39,46 +39,49 @@ Utils::OutputLineParser::Result LdParser::handleLine(const QString &line, Utils:
         return Status::NotHandled;
 
     QString lne = rightTrimmed(line);
-    if (!lne.isEmpty() && !lne.at(0).isSpace() && !currentTask().isNull()) {
-        flush();
-        return Status::NotHandled;
-    }
-
     if (lne.startsWith(QLatin1String("TeamBuilder "))
             || lne.startsWith(QLatin1String("distcc["))
             || lne.contains(QLatin1String("ar: creating "))) {
         return Status::NotHandled;
     }
 
+    const auto getStatus = [&lne] { return lne.endsWith(':') ? Status::InProgress : Status::Done; };
+
     // ld on macOS
-    if (lne.startsWith("Undefined symbols for architecture") && lne.endsWith(":")) {
+    if (lne.startsWith("Undefined symbols for architecture") && getStatus() == Status::InProgress) {
         createOrAmendTask(Task::Error, lne, line);
         return Status::InProgress;
     }
-    if (!currentTask().isNull() && lne.startsWith("  ")) {
+
+    if (!currentTask().isNull() && isContinuation(line)) {
         static const QRegularExpression locRegExp("    (?<symbol>\\S+) in (?<file>\\S+)");
         const QRegularExpressionMatch match = locRegExp.match(lne);
         LinkSpecs linkSpecs;
         Utils::FilePath filePath;
+        bool handle = false;
         if (match.hasMatch()) {
+            handle = true;
             filePath = absoluteFilePath(Utils::FilePath::fromString(match.captured("file")));
             addLinkSpecForAbsoluteFilePath(linkSpecs, filePath, 0, match, "file");
             currentTask().setFile(filePath);
+        } else {
+            handle = !lne.isEmpty() && lne.at(0).isSpace();
         }
-        createOrAmendTask(Task::Unknown, {}, line, true, filePath);
-        return {Status::InProgress, linkSpecs};
+        if (handle) {
+            createOrAmendTask(Task::Unknown, {}, line, true, filePath);
+            return {Status::InProgress, linkSpecs};
+        }
     }
 
     if (lne.startsWith("collect2:") || lne.startsWith("collect2.exe:")) {
-        scheduleTask(CompileTask(Task::Error, lne /* description */), 1);
-        return Status::Done;
+        createOrAmendTask(Task::Error, lne, line);
+        return getStatus();
     }
 
     QRegularExpressionMatch match = m_ranlib.match(lne);
     if (match.hasMatch()) {
-        QString description = match.captured(2);
-        scheduleTask(CompileTask(Task::Warning, description), 1);
-        return Status::Done;
+        createOrAmendTask(Task::Warning, match.captured(2), line);
+        return getStatus();
     }
 
     match = m_regExpGccNames.match(lne);
@@ -91,8 +94,8 @@ Utils::OutputLineParser::Result LdParser::handleLine(const QString &line, Utils:
         } else if (description.startsWith(QLatin1String("fatal: ")))  {
             description = description.mid(7);
         }
-        scheduleTask(CompileTask(type, description), 1);
-        return Status::Done;
+        createOrAmendTask(type, description, line);
+        return getStatus();
     }
 
     match = m_regExpLinker.match(lne);
@@ -101,41 +104,47 @@ Utils::OutputLineParser::Result LdParser::handleLine(const QString &line, Utils:
         int lineno = match.captured(7).toInt(&ok);
         if (!ok)
             lineno = -1;
-        Utils::FilePath filename
+        Utils::FilePath filePath
                 = absoluteFilePath(Utils::FilePath::fromUserInput(match.captured(1)));
         int capIndex = 1;
         const QString sourceFileName = match.captured(4);
         if (!sourceFileName.isEmpty()
             && !sourceFileName.startsWith(QLatin1String("(.text"))
             && !sourceFileName.startsWith(QLatin1String("(.data"))) {
-            filename = absoluteFilePath(Utils::FilePath::fromUserInput(sourceFileName));
+            filePath = absoluteFilePath(Utils::FilePath::fromUserInput(sourceFileName));
             capIndex = 4;
         }
         QString description = match.captured(8).trimmed();
-        Task::TaskType type = Task::Error;
-        if (description.startsWith(QLatin1String("first defined here")) ||
-            description.startsWith(QLatin1String("note:"), Qt::CaseInsensitive)) {
-            type = Task::Unknown;
-        } else if (description.startsWith(QLatin1String("warning: "), Qt::CaseInsensitive)) {
-            type = Task::Warning;
-            description = description.mid(9);
-        }
         static const QStringList keywords{
             "File format not recognized",
             "undefined reference",
+            "multiple definition",
             "first defined here",
             "feupdateenv is not implemented and will always fail", // yes, this is quite special ...
         };
         const auto descriptionContainsKeyword = [&description](const QString &keyword) {
             return description.contains(keyword);
         };
-        if (Utils::anyOf(keywords, descriptionContainsKeyword)) {
+        Task::TaskType type = Task::Unknown;
+        const bool hasKeyword = Utils::anyOf(keywords, descriptionContainsKeyword);
+        if (description.startsWith(QLatin1String("warning: "), Qt::CaseInsensitive)) {
+            type = Task::Warning;
+            description = description.mid(9);
+        } else if (hasKeyword) {
+            type = Task::Error;
+        }
+        if (hasKeyword || filePath.fileName().endsWith(".o")) {
             LinkSpecs linkSpecs;
-            addLinkSpecForAbsoluteFilePath(linkSpecs, filename, lineno, match, capIndex);
-            scheduleTask(CompileTask(type, description, filename, lineno), 1);
-            return {Status::Done, linkSpecs};
+            addLinkSpecForAbsoluteFilePath(linkSpecs, filePath, lineno, match, capIndex);
+            createOrAmendTask(type, description, line, false, filePath, lineno, 0, linkSpecs);
+            return {getStatus(), linkSpecs};
         }
     }
 
     return Status::NotHandled;
+}
+
+bool LdParser::isContinuation(const QString &line) const
+{
+    return currentTask().details.last().endsWith(':') || (!line.isEmpty() && line.at(0).isSpace());
 }
